--- a/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
@@ -24,7 +24,7 @@
 
 \section{Background, Vision and Scope}
 \subsection{Project background}
-Without the correct or adeqaute number of resources, learning a new concept may turn out to be a daunting task. This is especially true for students who are studying a Computer Science course yet are not equipped with a practical or theoretical programming background. The motivation behind this project is to develop a tool that is intended to bridge the  gap between inexperience and practical application. The tool will provide the means to simulate program logic through flowcharts in a practical setting. 
+Without the correct or adequate number of resources, learning a new concept may turn out to be a daunting task. This is especially true for students who are studying a Computer Science course yet are not equipped with a practical or theoretical programming background. The motivation behind this project is to develop a tool that is intended to bridge the  gap between inexperience and practical application. The tool will provide the means to simulate program logic through flowcharts in a practical setting. 
 
 \subsection{Project vision}
 
