--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -30,8 +30,12 @@
 \section{System Installation}
 		
 		This system requires a complete installation in order to fully operate it. For different platforms, various installation files are required. \newline \newline
+		For machines running on Windows platform, an executable is provided in the link below. However, for machines running on Linux machines, and executable .jar file is provided.\newline
 		
+				
 		The software can be found...
+		
+		
 		
 		% Create a website (or from sourceforge) 
 		
@@ -46,15 +50,40 @@
 		The image below shows the file that one requires for a complete successful installation of the program. Double-click the file to begin the installation process. \newline \newline \newline
 		\includegraphics[width=13cm, height=2cm]{images/Install1.jpg}		
 		\begin{center}
-		Figure: The file used to install Flow \newline
+		Figure: The executable file to install Flow \newline
 		\end{center}
 			
 		Next, follow the installation prompts and complete the installation. After a successful installation the application will be added to computer programs and it is accessible from the start menu. \\ \\
 		
-		\includegraphics[width=13cm]{images/Install2.jpg}		
+		\includegraphics[width=13cm,height=8cm]{images/Install2.jpg}		
 		\begin{center}
-		Figure: Follow installation instructions
+		Figure: Follow Windows installation instructions
 		\end{center}
+		
+		\subsection{Linux installation}
+		
+		All necessary files required to run this system on Linux platform are provided in the download link provided above. In the Linux folder, open "dist" folder and double-click the Flow.jar file. It requires no installation.\newline 
+		
+		This is different from Windows, where the user has to go through the installation process. All that is required on Linux is the files mentioned above.\newline \newline
+		
+		\includegraphics[width=14cm]{images/linuxInstall.jpg}		
+		\begin{center}
+			Figure: Opening Flow in Linux \newline
+		\end{center}
+		
+		After clicking the executable .jar file, a splash will show before the actual application. \newline \newline
+		\includegraphics[width=14cm]{images/splash.jpg}		
+		\begin{center}
+			Figure: Flow splash \newline
+		\end{center}
+		
+		Then the actual Flow in Linux will start running, in the same way as on Windows but now on Linux.\newline
+		
+		\includegraphics[width=14cm]{images/linuxFlow.jpg}		
+		\begin{center}
+			Figure: Flow in Linux platform \newline
+		\end{center}
+		
 
 \section{Getting Started}
 	
