Updated user manual

--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -295,8 +295,8 @@ However, the user can create new flowchart from the menu bar. To create a new fl
 	\subsection{Run Simulation}
 	To run the flowchart select the "Play" icon on the flowchart tools window, this will highlight the other three buttons, execute the whole flowchart, step-by-step execution and the stop icons.
 	
-	\includegraphics[width=14cm]{images/runSimulator.jpg}
-	
+	\includegraphics[width=14cm]{images/runSimulator.jpg}\newline\newline
+	\includegraphics[width=14cm]{images/runSimulator2.jpg}
 		
 	\subsection{Opening an Existing Flowchart}
 	
