--- a/Documentation/Functional Requirements/Report/architecturalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/architecturalRequirements.tex
@@ -17,7 +17,6 @@ Since no other system interfaces with this system, no integration is required ex
 This system does not connect with any network, database or any other systems. Mostly it will depend on pure Java built-in functions.
 
 \section{Quality Requirements}
-%Quality Requirements to be added - Keagan & Maret
 \begin{description}
   \item[Reliability:]
   	Any valid program expressed as a flowchart, without errors, is executable. In cases where errors are detected, sufficient feedback will be generated and provided to the user. A flowchart without any errors will generate output and feedback will also be provided.
@@ -44,7 +43,6 @@ This system does not connect with any network, database or any other systems. Mo
 
 \end{description}
 \section{Architecture Constraints}
-%Architecture Constraints to be added - Johan & Latham
 %Depending on which programming language best suits the interest of programmers, any language will be suitable. Preferably Java and C++. The system will resemble more or less the same programming styles used in Java and C++.
 
 Because this system is built from an already existing system which was purely coded in Java, it is then highly recommended to implement the new system in Java. There are also numerous reasons for this, i.e., Java is a pure Object-oriented programming language which makes the code more readable and easier to read. This enhances maintainability.\newline
@@ -62,6 +60,6 @@ To save the current state of a flowchart, all the components of the flowchart wi
 
 
 
-\end{document}
+%\end{document}
 
 
