--- a/Documentation/Functional Requirements/Report/titlepage.tex
+++ b/Documentation/Functional Requirements/Report/titlepage.tex
@@ -11,7 +11,7 @@
 		
 		\textbf{\LARGE COS 301 Main Project}
 		\newline \newline \newline
-		\textbf{\LARGE Requirements and Design Specifications}
+		\textbf{\LARGE Master Specification}
 		\newline \newline \newline
  		\textbf{\LARGE ThinkTech}
 		\newline \newline \newline
