--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -28,21 +28,12 @@
 		It is so far recommended that the computer in which the system will be executed on have Java 7 and above installed to allow the successful execution of the program. The system was not tested on Windows XP and the versions released before that, it is then recommended that the desktops should be running Windows 7 and above.\newline		
 		
 \section{System Installation}
+
+		The client is responsible for the distribution of the software, it will be available in the University of Pretoria - Computer Science website. The compressed folder will contain the installation file for Windows machines, and an executable .jar file for Linux machines. \newline
 		
 		This system requires a complete installation in order to fully operate it. For different platforms, various installation files are required. \newline \newline
 		For machines running on Windows platform, an executable is provided in the link below. However, for machines running on Linux machines, and executable .jar file is provided.\newline
 		
-				
-		The software can be found...
-		
-		
-		
-		% Create a website (or from sourceforge) 
-		
-		
-		%---- link ----
-		
-		% Link and screenshots of the entire process until the user has the icon on the desktop
 		
 
 		\subsection{Windows installation}
@@ -55,7 +46,7 @@
 			
 		Next, follow the installation prompts and complete the installation. After a successful installation the application will be added to computer programs and it is accessible from the start menu. \\ \\
 		
-		\includegraphics[width=13cm,height=8cm]{images/Install2.jpg}		
+		\includegraphics[width=13cm]{images/Install2.jpg}		
 		\begin{center}
 		Figure: Follow Windows installation instructions
 		\end{center}
@@ -105,7 +96,7 @@
 	%	For the time being an executable .jar file has been created to allow instant execution of the system without any installation. Below its a simple outline which illustrate this, an executable is clicked on the top right of the screen and Flow appears instantly. \newline \newline
 	
 	
-		After a successful installation of Flow, the potential user can then start the application normally on their machine. The image below depicts the desktop short-cut icon created after the installation is complete.	\\
+		After a successful installation of Flow, the potential user can then start the application normally on their machine. The image below depicts the desktop short-cut icon created after the installation is complete.\newline \newline
 		
 		\includegraphics[width=14cm]{images/DesktopIcon.jpg}
 		\begin{center}
@@ -146,40 +137,40 @@
 			\item \textbf{Menu Options -} The menu option provides options of creating, saving, deleting and loading projects onto the canvas. Also, this provides the user with many more options which are accessible by hovering over the name of the option. The figure below shows the functionality of all this.\newline 
 		
 		\begin{itemize}
-		\item Creating projects: The detailed description of this is given under "Creating projects"  below.
-		\item Saving projects:  The detailed description of this is given under "Saving projects" below.
-		\item Deleting projects: This will delete the entire project, from the main flowchart to the modules that the flowchart uses.
-		\item Loading projects: The detailed description of this is given under "Opening existing projects" below.
-\end{itemize}				
+		\item New: The detailed description of this is given under "Creating New Flowchart"  below.
+		\item Save:  The detailed description of this is given under "Saving The Flowchart" below.
+		\item Delete: This will delete the entire project, from the main flowchart to the modules that the flowchart uses.
+		\item Open: The detailed description of this is given under "Opening an existing flowchart" below.
+		\item Show/Hide Grid: Shows or hides the grids on the canvas.
+		\item Show/Hide Console: Shows or hides the execution console.
+		\item Export as image: This captures the current screen of the flowchart and save it as image.
+		\item Exit: Closes the application.\newline
+		\end{itemize}				
 			
-			\newpage
-			\includegraphics[width=14cm]{images/Menu.jpg}
-			\begin{center}
-		Figure: Menu Bar. \newline \newline \newline
+		\includegraphics[width=14cm]{images/Menu.jpg}
+		\begin{center}
+			Figure: Menu Bar. \newline \newline \newline
 		\end{center}
 			
 			
 		\end{itemize}
-
-	
 	
 	
 %%%%%%%%%%%%%%%%%% Very important %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	
-	
-	
+
 \section{Using the System}
 	\subsection{Creating New Flowchart}
 	
 	When the application is opened for the first time, a default project is created with a default flowchart, which compiles and execute without any output generated. The user then will start building the flowchart from already generated default flowchart. This is also demonstrated by the figure on general flowchart layout. \newline\newline
-However, the user can create new flowchart from the menu bar. To create a new flowchart select "File" in the menu bar (as illustrated by the figure below) and a drop down menu will appear.
+However, the user can create new flowchart from the menu bar. To create a new flowchart select "File" in the menu bar (as illustrated by the figure below) and a drop down menu will appear.\newline \newline
 
 		\includegraphics[width=14cm]{images/Menu.jpg}
 		\begin{center}
 			Figure: Creating new flowchart \newline \newline
 		\end{center}
 
- Select the "New" option, a pop-up window will appear requesting the user to save the current flowchart. After adhering to that request a new flowchart will be created on the canvas with a default flowchart as shown by the figure below.
+ Select the "New" option, a pop-up window will appear requesting the user to save the current flowchart. After choosing any of the options a new flowchart will be created on the canvas with a default flowchart as shown by the figure below.\newline \newline
  
  		\includegraphics[width=14cm]{images/newFlowchart.jpg}
 		\begin{center}
@@ -192,7 +183,7 @@ However, the user can create new flowchart from the menu bar. To create a new fl
 	The component section of Flow is divided into a couple of sections, flowchart symbols, loop structures and input/output blocks.
 	\subsubsection{Flowchart symbols}
 	
-	To add any of these components onto the canvas, click on the component of choice and move it onto the preferred destination on the canvas. To move the selected component, hover over the canvas and right-click the component to drop it. figure below shows the selected block that is to be dropped onto the canvas.\\
+	To add any of these components onto the canvas, click on the component of choice and move it onto the preferred destination on the canvas. To move the selected component, hover over the canvas and right-click the component to drop it. figure below shows the selected block that is to be dropped onto the canvas.\newline
 	
 	\includegraphics[width=12cm]{images/addBlock.jpg} \newline
 	
@@ -202,7 +193,7 @@ However, the user can create new flowchart from the menu bar. To create a new fl
 	
 	\subsubsection{Loop structures}
 	
-	Loop structures are pre-defined loop components that can be added to the flowchart without any major drawing of the actual components. To add these components, click on the desired block, a pop-up will appear.\\
+	Loop structures are pre-defined loop components that can be added to the flowchart without any major drawing of the actual components. To add these components, click on the desired block, a pop-up will appear.\newline \newline
 	
 	\includegraphics[width=12cm]{images/loops.jpg} \newline
 	
@@ -210,27 +201,27 @@ However, the user can create new flowchart from the menu bar. To create a new fl
 	
 	\subsubsection{Input/Output blocks}	
 	
-	To add the input/output block(s), click on the block highlighted with fading words "input"/"output" inside the block. Then drop it on the position of your own choice by clicking on it again.\\
+	To add the input/output block(s), click on the block highlighted with fading words "input"/"output" inside the block. Then drop it on the position of your own choice by clicking on it again.\newline \newline
 	
-	\includegraphics[width=12cm]{images/io.jpg}
+	\includegraphics[width=12cm]{images/io.jpg} \newline
 	
 	%\newline \newline
 	\subsection{Editing Component}
 	
-	Editing the component entails manipulation of the features and adding code inside the component. To edit the component click on the component that you want to edit and the a pop-up window will appear on the far right side of the canvas with the option of adding simple code into the component.
+	Editing the component entails manipulation of the features and adding code inside the component. To edit the component click on the component that you want to edit and the a pop-up window will appear on the far right side of the canvas with the option of adding simple code into the component. 
 	
 	\subsubsection{Declaration block}
 	
-	To edit a declaration block, click on it, then a pop-up window will appear with an option to add all the declarations that are going to be used throughout the flowchart.\\
+	To edit a declaration block, click on it, then a pop-up window will appear with an option to add all the declarations that are going to be used throughout the flowchart.\newline \newline
 	
 	\includegraphics[width=12cm]{images/editDeclaration.jpg} \newline \newline
-	On the pop-up window, the user can select with a drop-down menu the type of a variable to be declared. See figure below.\\
+	On the pop-up window, the user can select with a drop-down menu the type of a variable to be declared. See figure below.\newline \newline
 	
 	\includegraphics[width=12cm]{images/editDeclaration1.jpg} \newline \newline
-	Then in the box next to the drop-down menu, key in any variable name of your choice and initialise it to the value of your choice, then click on 'Add' button.\\
+	Then in the box next to the drop-down menu, key in any variable name of your choice and initialise it to the value of your choice, then click on 'Add' button.\newline \newline
 	
 	\includegraphics[width=12cm]{images/editDeclaration2.jpg} \newline \newline
-	The declaration block will not be automatically updated, to update the block, click on any blank space on the canvas then click on the block. After that, the block will be updated.
+	The declaration block will not be automatically updated, to update the block, click on any blank space on the canvas then click on the block. After that, the block will be updated. \newline \newline
 	
 	\includegraphics[width=12cm]{images/editDeclaration3.jpg}
 	
@@ -242,7 +233,7 @@ However, the user can create new flowchart from the menu bar. To create a new fl
 	
 	\subsubsection{Decision block}
 	
-	The process of editing the decision block is similar to that of editing a processing block. \newline
+	The process of editing the decision block is similar to that of editing a processing block. 
 	
 	\subsubsection{Module block}
 	
@@ -277,6 +268,10 @@ However, the user can create new flowchart from the menu bar. To create a new fl
 	\end{itemize}
 		
 	\includegraphics[width=12cm]{images/editOutput.jpg} \newline
+	
+	\subsection{Connecting blocks}
+	
+	To connect one block to another, click on the first block and hold "ctrl" key on the keyboard, then click the second block. More than two blocks can be connected in a similar fashion, initially click on the first block and hold ""ctrl" button, then click on as many blocks as you wish to connect in the order of flow.
 				
 	\subsection{Removing Components from Canvas}
 	
@@ -293,7 +288,7 @@ However, the user can create new flowchart from the menu bar. To create a new fl
 	\includegraphics[width=14cm]{images/saveFile.jpg}
 	
 	\subsection{Run Simulation}
-	To run the flowchart select the "Play" icon on the flowchart tools window, this will highlight the other three buttons, execute the whole flowchart, step-by-step execution and the stop icons.
+	To run the flowchart select the "Play" icon on the flowchart tools window, this will highlight the other three buttons, execute the whole flowchart, step-by-step execution and the stop icons.\newline \newline
 	
 	\includegraphics[width=14cm]{images/runSimulator.jpg}
 	
@@ -306,7 +301,13 @@ However, the user can create new flowchart from the menu bar. To create a new fl
 	
 \section{Troubleshooting}
 
-Recall from "System Configuration" the Java version compatible with this system. Older versions of Java may cause the system to break, and not execute as expected. Hence, violating the reliability of the entire system.
+Recall from "System Configuration" the Java version compatible with this system. Older versions of Java may cause the system to break, and not execute as expected. Hence, violating the reliability of the entire system. \newline
+
+To get the latest version of Java go to https://java.com/en/download/ \newline \newline
+
+\includegraphics[width=14cm]{images/installJava.jpg} \newline
+
+Click on the download button, save the file to your local directory. Follow the installation instructions.
 
 This system is not connected to any other external systems, this reduces the amount of errors that might usually breakdown the system.
 
