--- a/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
@@ -1,7 +1,8 @@
 \documentclass[12pt,a4paper,titlepage]{article}
 \usepackage{graphicx}
 \usepackage[margin=1in]{geometry}
-%\usepackage{titling}
+\usepackage{titling}
+
 \usepackage{booktabs}
 \usepackage[hidelinks]{hyperref}
 \usepackage{float}
@@ -75,16 +76,11 @@ Only the basic components of standard flowcharts are necessary.\\
       \toprule
       Critical & Important & Nice-To-Have\\
       \midrule	
-<<<<<<< HEAD
-      createFlowchartProject & addFlowchartComponent &  drag-and-drop flowchart into bin\\
-      deleteFlowchart & editFlowchartComponent & enchanceExecutionWithColours\\
-       & deleteFlowchartComponent & \\
-       & saveFlowchart & \\
-       & loadFlowchart & \\
-       & executeFlowchart & \\
-      \bottomrule
-    \end{tabular}  
-=======
+%<<<<<<< HEAD
+    
+    %\end{tabular}  
+%=======
+	%\begin{tabular}{ccc}
       createFlowchartProject & addFlowchartComponent &  drag-and-drop components into bin\\
       deleteFlowchart & editFlowchartComponent & snap-to-grid development\\
        & deleteFlowchartComponent & predefined math functions\\
@@ -94,7 +90,7 @@ Only the basic components of standard flowcharts are necessary.\\
       \bottomrule     
      \end{tabular}  
     \caption{Use case prioritization}
->>>>>>> origin/master
+%>>>>>>> origin/master
 \end{table}
 
 
@@ -267,4 +263,7 @@ The executeFlowchart use case enables the functionality to execute the flowchart
 
 \newpage
 \input{./architecturalRequirements.tex}
-\end{document}
+
+\newpage
+
+\input{./architecturalDesign.tex}
