--- a/Revised JB version/src/config/lang/descriptions.properties
+++ b/Revised JB version/src/config/lang/descriptions.properties
@@ -12,7 +12,7 @@ script=<html>Embedd script.<br>\nShould be a JavaScript function only!
 comment=<html>Just a comment. Doing nothing, <br>\nYou can't connect any block to it.
 CPU.help=<html>Processing block<hr/>\nPerformed in the calculation, produces features <br/>\nGeneral-purpose block <br/>
 IO.help=<html>Input/Output block (code)<hr/>\nUsed to read and write data
-IOin.help=<html>Input block<hr/>\nServes only to collect data from user
+IOin.help=<html>Input block<hr/>
 DECISION.help=<html>Decision block<hr/>
 RETURN.help=<html>End/Return block<hr/>
 COMMENT.help=<html>Comment<hr/>
