Final user manual

--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -290,8 +290,11 @@ However, the user can create new flowchart from the menu bar. To create a new fl
 	\subsection{Run Simulation}
 	To run the flowchart select the "Play" icon on the flowchart tools window, this will highlight the other three buttons, execute the whole flowchart, step-by-step execution and the stop icons.\newline \newline
 	
-	\includegraphics[width=14cm]{images/runSimulator.jpg}\newline\newline
-	\includegraphics[width=14cm]{images/runSimulator2.jpg}
+	\includegraphics[width=14cm]{images/runSimulator2.jpg}\newline\newline
+	
+	At every step, the block being executed will be highlighted with a green color as illustrated by these two diagrams.\newline \newline
+	
+	\includegraphics[width=14cm]{images/runSimulator.jpg}
 		
 	\subsection{Opening an Existing Flowchart}
 	
